cluster-apps/wordpress/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: wordpress
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    customResponseHeaders:
      Server: ""
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ratelimit
  namespace: wordpress
spec:
  rateLimit:
    average: 75   # average requests per second
    burst: 150     # maximum burst
    period: 1m
    sourceCriterion:
      requestHost: false
