cluster-apps/wordpress/deny-endpoints.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: deny-endpoints
  namespace: wordpress
spec:
  ipAllowList:
    sourceRange:
      - "127.0.0.1/32"
