cluster-apps/wordpress/mariadb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app: mariadb
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      serviceAccountName: mariadb-service-account
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: mariadb
          image: mariadb:11.8.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi

          startupProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            failureThreshold: 30
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - localhost
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
            - name: tmp
              mountPath: /tmp
            - name: run-mysqld
              mountPath: /var/run/mysqld

          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
        - name: run-mysqld
          emptyDir:
            sizeLimit: 8Mi

  volumeClaimTemplates:
    - metadata:
        name: mariadb-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: mariadb
        resources:
          requests:
            storage: 512Mi
