cluster-apps/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      serviceAccountName: wordpress-service-account
      automountServiceAccountToken: false

      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: wordpress

      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      containers:
      - name: wordpress
        image: wordpress:6.9.1-php8.5-apache
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
            add:
              - NET_BIND_SERVICE

        startupProbe:
          httpGet:
            path: /wp-login.php
            port: 80
          failureThreshold: 30
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /wp-login.php
            port: 80
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /wp-login.php
            port: 80
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 512Mi

        volumeMounts:
        - name: wp-html
          mountPath: /var/www/html
        - name: wp-content
          mountPath: /var/www/html/wp-content
        - name: apache-run
          mountPath: /var/run/apache2
        - name: apache-lock
          mountPath: /var/lock/apache2
        - name: tmp
          mountPath: /tmp
        - name: apache-config
          mountPath: /etc/apache2/conf-enabled/zz-hide-versions.conf
          subPath: zz-hide-versions.conf
        - name: php-config
          mountPath: /usr/local/etc/php/conf.d/custom-php.ini
          subPath: custom-php.ini

      volumes:
      - name: wp-html
        emptyDir:
          sizeLimit: 256Mi
      - name: wp-content
        persistentVolumeClaim:
          claimName: wordpress-content-pvc
      - name: apache-run
        emptyDir: {}
      - name: apache-lock
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: apache-config
        configMap:
          name: wordpress-apache-config
      - name: php-config
        configMap:
          name: wordpress-php-config
